--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pengumuman Kelulusan SMA Negeri 6 Sigi</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     /* Reset default margin dan padding */
     * {
@@ -13,7 +15,7 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', Arial, sans-serif;
       line-height: 1.6;
       background: linear-gradient(to bottom, #0096ff, #00e676); /* Gradien biru ke hijau */
       color: #333;
@@ -28,46 +30,73 @@
       max-width: 400px;
       width: 100%;
       background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       text-align: center;
+      position: relative;
     }
 
     /* Styling untuk logo */
     .logo {
-      width: 150px; /* Sesuaikan ukuran logo */
+      width: 120px; /* Ukuran logo lebih kecil */
       margin-bottom: 20px;
     }
 
+    /* Judul */
+    h1 {
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: #007bff;
+      margin-bottom: 15px;
+    }
+
+    /* Subjudul */
+    p {
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 20px;
+    }
+
+    /* Input NISN */
     input[type="text"] {
       width: 100%;
-      padding: 15px;
-      margin-bottom: 20px;
+      padding: 12px;
+      margin-bottom: 15px;
       border: 2px solid #007bff;
-      border-radius: 5px;
+      border-radius: 8px;
       font-size: 1rem;
+      transition: border-color 0.3s ease;
     }
 
+    input[type="text"]:focus {
+      border-color: #0056b3;
+      outline: none;
+    }
+
+    /* Tombol */
     button {
       background: #007bff;
       color: white;
-      padding: 10px 20px;
+      padding: 12px 20px;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       font-size: 1rem;
+      font-weight: 500;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.3s ease;
     }
 
     button:hover {
       background: #0056b3;
+      transform: scale(1.05);
     }
 
+    /* Kotak Hasil */
     .result-container {
       margin-top: 20px;
       padding: 15px;
-      border-radius: 5px;
+      border-radius: 8px;
     }
 
     .result-lulus {
@@ -82,13 +111,27 @@
 
     .result-title {
       font-size: 1.5rem;
+      font-weight: 700;
       margin-bottom: 10px;
     }
 
     .result-message {
       font-size: 1rem;
+      font-weight: 400;
     }
 
+    /* Pesan Error */
+    .error-message {
+      margin-top: 15px;
+      padding: 10px;
+      background: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
+      border-radius: 8px;
+      font-size: 0.9rem;
+    }
+
+    /* Footer */
     .footer {
       position: absolute;
       bottom: 0;
@@ -117,8 +160,14 @@
   <div id="input-page" class="container" style="display: none;">
     <img src="logo-sekolah.png" alt="Logo SMA Negeri 6 Sigi" class="logo">
 
+    <h1>Masukkan NISN Anda</h1>
+    <p>Silakan masukkan NISN untuk melihat hasil kelulusan:</p>
+
     <input type="text" id="nisnInput" placeholder="Masukkan NISN Anda" />
-    <button onclick="checkResult()">Periksa Hasil</button>
+    <button onclick="checkResult()">Cek Hasil</button>
+
+    <!-- Pesan Error -->
+    <div id="error-message" class="error-message" style="display: none;"></div>
   </div>
 
   <!-- Halaman Hasil Kelulusan -->
@@ -133,7 +182,7 @@
 
   <!-- Footer -->
   <div class="footer">
-    © 2024 SMA Negeri 6 Sigi
+    © 2025 SMA Negeri 6 Sigi
   </div>
 
   <script>
@@ -154,12 +203,15 @@
     function checkResult() {
       const nisn = document.getElementById("nisnInput").value.trim();
       const resultDiv = document.getElementById("result");
+      const errorDiv = document.getElementById("error-message");
 
       // Reset pesan sebelumnya
-      resultDiv.innerHTML = ""; // Gunakan innerHTML untuk memungkinkan penambahan elemen baru
+      resultDiv.innerHTML = "";
+      errorDiv.style.display = "none";
 
       if (nisn === "") {
-        alert("NISN tidak boleh kosong!");
+        errorDiv.textContent = "NISN tidak boleh kosong!";
+        errorDiv.style.display = "block";
         return;
       }
 
@@ -193,7 +245,8 @@
         // Tampilkan hasil
         resultDiv.innerHTML = `<div class="${className}">${message}</div>`;
       } else {
-        alert("NISN tidak ditemukan. Silakan coba lagi.");
+        errorDiv.textContent = "NISN tidak ditemukan. Silakan coba lagi.";
+        errorDiv.style.display = "block";
       }
     }
 
@@ -201,10 +254,12 @@
     function resetForm() {
       const nisnInput = document.getElementById("nisnInput");
       const resultDiv = document.getElementById("result");
+      const errorDiv = document.getElementById("error-message");
 
       // Kosongkan input NISN dan hasil kelulusan
       nisnInput.value = "";
       resultDiv.innerHTML = "";
+      errorDiv.style.display = "none";
 
       // Kembali ke halaman input NISN
       document.getElementById("result-page").style.display = "none";
