--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
       font-size: 1rem;
       color: #555;
       margin-bottom: 20px;
-      max-width: 300px; /* Membatasi lebar teks agar tidak terlalu panjang */
+      max-width: 350px; /* Membatasi lebar teks agar tidak terlalu panjang */
       margin-left: auto;
       margin-right: auto;
       text-align: center;
+      line-height: 1.4; /* Mengurangi jarak antar baris */
     }
 
     /* Tombol */
@@ -100,7 +101,8 @@
     <img src="logo-sekolah.png" alt="Logo SMA Negeri 6 Sigi" class="logo">
 
     <h1>Selamat Datang di Pengumuman Kelulusan</h1>
-    <p>Assalamualaikum Warahmatullahi Wabarakatuh, Kami ucapkan selamat kepada seluruh siswa/i yang telah menyelesaikan jenjang pendidikan di SMA Negeri 6 Sigi. Semoga ilmu yang didapatkan bermanfaat bagi masa depan.</p>
+    <p>Assalamualaikum Warahmatullahi Wabarakatuh.</p>
+    <p>Kami ucapkan selamat kepada seluruh siswa/i yang telah menyelesaikan jenjang pendidikan di SMA Negeri 6 Sigi. Semoga ilmu yang didapatkan bermanfaat bagi masa depan.</p>
 
     <button onclick="showLoginPage()">LOGIN</button>
   </div>
