--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <h1>Selamat Datang di Pengumuman Kelulusan</h1>
     <p>Assalamualaikum Warahmatullahi Wabarakatuh.</p>
-    <p>Kami ucapkan selamat kepada seluruh siswa/i yang telah menyelesaikan jenjang pendidikan di SMA Negeri 6 Sigi. Semoga ilmu yang didapatkan bermanfaat bagi masa depan.</p>
+    <p>Kami ucapkan selamat kepada seluruh siswa/i yang telah menyelesaikan jenjang pendidikan selama 3 tahun di SMA Negeri 6 Sigi. Semoga ilmu yang didapatkan bermanfaat bagi masa depan.</p>
 
     <button onclick="showLoginPage()">LOGIN</button>
   </div>
