--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
       "1234567890": { name: "Andi", status: "Lulus" },
       "0987654321": { name: "Budi", status: "Tidak Lulus" },
       "1122334455": { name: "Citra", status: "Lulus" },
-      "69334651": { name: "Afdal Arifianto", status: "LULUS" },
-    "3079929362": { name: "Ahmad Rezki", status: "LULUS" },
-    "76290299": { name: "AIRA PUTRI RAMADHANI", status: "LULUS" },
+      "69334651":   { name: "Afdal Arifianto", status: "Lulus" },
+    "3079929362":   { name: "Ahmad Rezki", status: "Lulus" },
+    "76290299":     { name: "AIRA PUTRI RAMADHANI", status: "Lulus" },
     };
 
     // Fungsi untuk menampilkan halaman login
